--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 				    <div class="card-block">
 				      <h4 class="card-title">Leah Carr</h4>
 				      <p class="card-text"><small class="text-muted">Writer</small></p>
-				      <p class="card-text">Leah is family here at Reid Repairs. Matt's first cousin and first employee has been the keystone of the shop. Her background in bookkeeping and marketing, along with her small business acumen, have made the shop run like top. Her ever-smiling, cheerful visage isn't bad either.</p>
+				      <p class="card-text">Leah is family here at Reid Repairs. Matt's first cousin and first employee has been the keystone of the shop. Her background in bookkeeping and marketing, along with her small business acumen, have made the shop run like a top. Her ever-smiling, cheerful visage isn't bad either.</p>
 				      
 				    </div>
 				  </div>
