--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				    <div class="card-block">
 				      <h4 class="card-title">Matt Reid</h4>
 				      <p class="card-text"><small class="text-muted">Owner</small></p>
-				      <p class="card-text">Owner, operator, and namesake of Reid Repairs. Matt has over 20 years of experience in the Automotive Industry. Having worked at large dealerships and small shops, Matt wanted to open a shop that offered the quality and consistency of a dealership along with the personal relattionship you should expect from a small shop.</p>
+				      <p class="card-text">Owner, operator, and namesake of Reid Repairs. Matt has over 20 years of experience in the Automotive Industry. Having worked at large dealerships and small shops, Matt wanted to open a shop that offered the quality and consistency of a dealership along with the personal relationship you should expect from a small shop.</p>
 				      
 				    </div>
 				  </div>
