--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<div class="transparent width-control" id="inspection-area">
 			<div class="height"></div>
 			<div class="inspection-image">
-				<img src="img/InspectionKeystonePlate.svg" alt="Official Inspection Station" >
+				<img src="img/InspectionKeystonePlate.png" alt="Official Inspection Station" >
 			</div>
 			<div class="height"></div>
 		</div>
@@ -168,7 +168,7 @@
 			<div class="height"></div>
 			
 			<div class="uhaul-image">
-				<img src="img/ase-logo.svg" alt="ASE Certified mechanics" >
+				<img src="img/ase-logo.png" alt="ASE Certified mechanics" >
 			</div>
 			<div class="height"></div>
 			
@@ -249,7 +249,7 @@
 			<div class="height"></div>
 			
 			<div class="uhaul-image">
-				<img src="img/uhaullogo.svg" alt="Uhaul Rental" >
+				<img src="img/uhaullogo.png" alt="Uhaul Rental" >
 			</div>
 			<div class="height"></div>
 			
