--- a/index.html
+++ b/index.html
@@ -50,19 +50,30 @@
 		<script src='https://www.google.com/recaptcha/api.js'></script>
 		 -->
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		 <style>
+		 	/*Whole Page - base*/
+			@font-face {
+			    font-family: copper;
+			    src: url('../fonts/Copperplate Gothic Thirty-One AB.ttf');
+			}
+			@font-face {
+			    font-family: SinkinSans;
+			    src: url('../fonts/SinkinSans-400Regular.otf');
+			}
+			body{
+				text-align: center;
+				background:#FFFDD0;
+				color:#3f3f3f;
+				background-repeat: no-repeat;
+			    background-attachment: fixed;
+			}
+			h1{
+				line-height: 100px;
+			}
+		 </style>
 	</head>
 
 	<body>
-		<!-- Google Analytics -->
-		<script async>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-71607216-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
 
 		<!-- Branding -->
 		<div class="background static" id="branding">
@@ -339,6 +350,17 @@
 			<div class="quarter-height"></div>
 		</div>
 	</footer>
+
+	<!-- Google Analytics -->
+	<script async>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-71607216-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
 	
