css inline font

--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
 			h1{
 				line-height: 100px;
 			}
+			#circle{
+				width:50%;
+				min-width:260px;
+				max-width: 500px;
+				margin:0 auto;
+				font-family: copper, Times, serif;
+			}
+			.content{
+				font-family:SinkinSans, "Courier New", monospace;
+				color:#3a3a3a;
+			}
+			.subtext{
+			    position: relative;
+			    bottom: 16px;
+			    font-family:SinkinSans, "Courier New", monospace;
+			    margin-top:0;
+			}
 		 </style>
 	</head>
 
