--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</script>
 		
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" async>
-		<link rel="stylesheet" href="css/main.css" async>
+		<link rel="stylesheet" href="css/main.min.css">
 		<!-- Font Awesome gives us our social logos -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" async>
 		<!-- re-Captcha
