--- a/index.html
+++ b/index.html
@@ -42,10 +42,27 @@
 		}
 		</script>
 
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" async>
-		<link rel="stylesheet" href="css/main.min.css" async>
-		<!-- Font Awesome gives us our social logos -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" async>
+		<noscript id="deferred-styles">
+			<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+			<link rel="stylesheet" href="css/main.min.css">
+			<!-- Font Awesome gives us our social logos -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	      <link rel="stylesheet" type="text/css" href="small.css"/>
+	    </noscript>
+	    <script>
+	      var loadDeferredStyles = function() {
+	        var addStylesNode = document.getElementById("deferred-styles");
+	        var replacement = document.createElement("div");
+	        replacement.innerHTML = addStylesNode.textContent;
+	        document.body.appendChild(replacement)
+	        addStylesNode.parentElement.removeChild(addStylesNode);
+	      };
+	      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+	          webkitRequestAnimationFrame || msRequestAnimationFrame;
+	      if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+	      else window.addEventListener('load', loadDeferredStyles);
+	    </script>
+
 
 		<style>
 			@font-face {
@@ -307,29 +324,6 @@
 				<p>We're looking forward to speaking with you</p>
 			</div>
 
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-			<script>
-				$('#confirmation').hide();
-			    $('#ss-form').submit(function(e) {
-			        e.preventDefault();
-			        $.ajax({
-			            url: "https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse",
-			            data: $(this).serialize(),
-			            type: "POST",
-			            dataType: "xml",
-			            success: function(data) {
-			                $('#confirmation').show();
-			                $('#ss-form').hide();
-
-			            },
-			            error: function(xhr, status, error) {
-			                $('#confirmation').show();
-			                $('#ss-form').hide();
-			            }
-			        });
-			    });
-			</script>
 			<div class="height"></div>
 		</div>
 
@@ -366,6 +360,30 @@
 			<div class="quarter-height"></div>
 		</div>
 	</footer>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+	<script>
+		$('#confirmation').hide();
+	    $('#ss-form').submit(function(e) {
+	        e.preventDefault();
+	        $.ajax({
+	            url: "https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse",
+	            data: $(this).serialize(),
+	            type: "POST",
+	            dataType: "xml",
+	            success: function(data) {
+	                $('#confirmation').show();
+	                $('#ss-form').hide();
+
+	            },
+	            error: function(xhr, status, error) {
+	                $('#confirmation').show();
+	                $('#ss-form').hide();
+	            }
+	        });
+	    });
+	</script>
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
