--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			    position: relative;
 			    bottom: 16px;
 			    font-family:SinkinSans, "Courier New", monospace;
-			    margin-top:0;
+			    //margin-top:0;
 			}
 		 </style>
 		
