--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@
 					</div>
 					<div>
 						<span class="social">
-							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank">
-								<i class="fa fa-facebook-official"></i>
+							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank" title="Facebook">
+								<icon class="fa fa-facebook-official icon-locks"></icon>
 							</a>
 						</span>
 				        <span class="social">
-				        	<a href="https://twitter.com/reidrepairs" target="_blank">
-				        		<i class="fa fa-twitter"></i>
+				        	<a href="https://twitter.com/reidrepairs" target="_blank" title="Twitter">
+				        		<icon class="fa fa-twitter icon-lock"></icon>
 			        		</a>
 		        		</span>
 				        <span class="social">
-				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank">
-				        		<i class="fa fa-google-plus-official"></i>
+				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank" title="Google Plus">
+				        		<icon class="fa fa-google-plus-official icon-lock"></icon>
 			        		</a>
 		        		</span>
 					</div>
@@ -308,7 +308,7 @@
 			  	</div>
 				<div class="form-group btn-row">
 			    	<label class="sr-only" for="inputDescription">Description</label>
-			    	<textarea name="entry.1021358522" required type="tel" class="form-control" id="inputDescription" placeholder="Reason for Visit"></textarea>
+			    	<textarea name="entry.1021358522" required class="form-control" id="inputDescription" placeholder="Reason for Visit"></textarea>
 			  	</div>
 
 			  	<!-- To implement reCaptcha - can only do if backend is enabled. 
@@ -332,7 +332,7 @@
 				<p>Would you like more information?</p> 
 				<p>Go ahead and reach out, we're happy to help.</p>
 			</div>
-			<img src="img/vince.gif" lazyload/>
+			<img alt="silly gif of dancing John Travolta" src="img/vince.gif" lazyload/>
 		</div>
 
 
