--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 					<div class="quarter-height"></div>
 					<div>
 						<h2>Hours</h2>
-						<p><time>Monday - Friday 8:00 to 5:00</time></p>
-						<p><time>Saturday 9:00 to 1:00</time></p>
+						<p>Monday - Friday 8:00 to 5:00</p>
+						<p>Saturday 9:00 to 1:00</p>
 						<h2>Location</h2>
 						<p>
 							<span>2 S York Road
@@ -332,7 +332,7 @@
 				<p>Would you like more information?</p> 
 				<p>Go ahead and reach out, we're happy to help.</p>
 			</div>
-			<img alt="silly gif of dancing John Travolta" src="img/vince.gif" lazyload/>
+			<img alt="silly gif of dancing John Travolta" src="img/vince.gif"/>
 		</div>
 
 
