--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
 			    font-family:SinkinSans, "Courier New", monospace;
 			    //margin-top:0;
 			}
+			.sr-only {
+			  height: 1px;
+			  width: 1px;
+			  position: absolute;
+			  overflow: hidden;
+			  top: -10px;
+			}
 		 </style>
 		
 	</head>
@@ -139,16 +146,19 @@
 					<div>
 						<span class="social">
 							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank" title="Facebook">
+								<span class="sr-only">Like us on Facebook</span>
 								<icon class="fa fa-facebook-official icon-locks"></icon>
 							</a>
 						</span>
 				        <span class="social">
 				        	<a href="https://twitter.com/reidrepairs" target="_blank" title="Twitter">
+				        		<span class="sr-only">Follow us on Twitter</span>
 				        		<icon class="fa fa-twitter icon-lock"></icon>
 			        		</a>
 		        		</span>
 				        <span class="social">
 				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank" title="Google Plus">
+				        		<span class="sr-only">Plus 1 us on Google Plus</span>
 				        		<icon class="fa fa-google-plus-official icon-lock"></icon>
 			        		</a>
 		        		</span>
