--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 				background-repeat: no-repeat;
 			    background-attachment: fixed;
 			}
-			h1{
+			h1, h3{
 				line-height: 100px;
+				font-size: 36px !important;
 			}
 			#circle{
 				width:50%;
@@ -178,7 +179,7 @@
 		<!--</div>-->
 
 		<div class="front mid-page" id="services">
-			<h1>Services</h1>
+			<h3>Services</h3>
 			<ul class="service-list">
 				
 				<li>PA State Inspection and Emissions</li>
@@ -216,7 +217,7 @@
 		
 
 		<div id="about" class="front mid-page about">
-			<h1>About Us</h1>
+			<h3>About Us</h3>
 			<p>Reid Repairs was originally opened in a small shop just down the street in January of 2016. We're very proud to have taken over our new location in the center of Hatboro. Tom McMackin trusted us to take over his shop and we aim to uphold their standard of quality and timely work.
 			Our goal is to provide the high quality and consistent automotive repair that you would expect from a large dealership along with the personal relationship of a small shop.</p>
 			
@@ -265,21 +266,21 @@
 		</div>
 
 		<div class="front mid-page" id="general-info">
-			<h1>Convenience</h1>
+			<h3>Convenience</h3>
 			
-			<i class="fa fa-car" aria-hidden="true"></i>
+			<icon class="fa fa-car" aria-hidden="true"></icon>
 			<p>Just seven minutes from the PA Turnpike, right in the center of Hatboro, PA.</p>
 			
-			<i class="fa fa-road" aria-hidden="true"></i>
+			<icon class="fa fa-road" aria-hidden="true"></icon>
 			<p>We're right at the corner of York Rd and Moreland Ave.</p>
 
-			<i class="fa fa-train" aria-hidden="true"></i>
+			<icon class="fa fa-train" aria-hidden="true"></icon>
 			<p>Reid Repairs is located in walking distance to SEPTA's Hatboro Regional Rail Station.</p>
 
-			<i class="fa fa-bus" aria-hidden="true"></i>
+			<icon class="fa fa-bus" aria-hidden="true"></icon>
 			<p>Don't like the train? Take a bus!</p>
 
-			<i class="fa fa-truck" aria-hidden="true"></i>
+			<icon class="fa fa-truck" aria-hidden="true"></icon>
 			<p>Don't like the bus? Rent a U-Haul truck!</p>
 			<div class="height"></div>
 		</div>
@@ -296,7 +297,7 @@
 		</div>
 		
 		<div class="front mid-page" id="contact-us">
-			<h1>Contact Us</h1>
+			<h2>Contact Us</h2>
 			<p>Too shy to call? Feel free to fill out this form:</p>
 			<form action="https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse" 
 				method="POST" 
@@ -338,7 +339,7 @@
 
 		<div class="end-of-page">
 			<div class="section">
-				<h2>Thanks for visiting!</h2>
+				<h4>Thanks for visiting!</h4>
 				<p>Would you like more information?</p> 
 				<p>Go ahead and reach out, we're happy to help.</p>
 			</div>
