--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			}
 			h1, h3{
 				line-height: 100px;
-				font-size: 36px !important;
+				font-size: 36px;
 			}
 			#circle{
 				width:50%;
@@ -132,16 +132,16 @@
 				<div class="front top-page">
 					<div class="quarter-height"></div>
 					<div>
-						<h2>Hours</h2>
+						<h3>Hours</h3>
 						<p>Monday - Friday 8:00 to 5:00</p>
 						<p>Saturday 9:00 to 1:00</p>
-						<h2>Location</h2>
+						<h3>Location</h3>
 						<p>
 							<span>2 S York Road
 							<br />
 							Hatboro, PA 19040</span>
 						</p>
-						<h2>Call</h2>
+						<h3>Call</h3>
 						<p>267-454-4682</p>
 					</div>
 					<div>
@@ -297,7 +297,7 @@
 		</div>
 		
 		<div class="front mid-page" id="contact-us">
-			<h2>Contact Us</h2>
+			<h3>Contact Us</h3>
 			<p>Too shy to call? Feel free to fill out this form:</p>
 			<form action="https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse" 
 				method="POST" 
