--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
 				background-repeat: no-repeat;
 			    background-attachment: fixed;
 			}
-			h1, h3{
-				line-height: 100px;
-				font-size: 36px;
+			h3{
+    			font-size: 36px !important;
 			}
 			#circle{
 				width:50%;
