--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		  "name" : "Reid Repairs",
 		  "telephone" : "267-454-4682",
 		  "logo":"http://reidrepairs.com/img/logo.png",
+		  "image":"http://reidrepairs.com/img/snowy.jpg",
 		  "address" : {
 		    "@type" : "PostalAddress",
 		    "streetAddress" : "2 South York Road",
