schema.json update

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 		{
 		  "@context" : "http://schema.org",
 		  "@type" : "AutoRepair",
-		  "name" : "Reid Repairs",
+		  "name" : "Reid Repairs - Auto Repair",
 		  "telephone" : "267-454-4682",
 		  "logo":"http://reidrepairs.com/img/logo.png",
 		  "image":"http://reidrepairs.com/img/snowy.jpg",
 		  "address" : {
 		    "@type" : "PostalAddress",
-		    "streetAddress" : "2 South York Road",
+		    "streetAddress" : "2 S York Road",
 		    "addressLocality": "Hatboro",
 		    "addressRegion": "PA",
 		    "postalCode": "19040"
 		  },
 		  "founder":"Matthew Reid",
 		  "legalName":"Reid Repairs, LLC",
-		  "description": "Independently owned and operated mechanic shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
+		  "description": "Independently owned and operated mechanic and car repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
 		  	"telephone": "267-454-4682",
 		  	"openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:00", "Sa 09:00-13:00"],
 		  	"geo": {
