--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		  	"openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:00", "Sa 09:00-13:00"],
 		  	"geo": {
 		      "@type": "GeoCoordinates",
-		      "latitude": "40.1725118",
-		      "longitude": "-75.1094372"
+		      "latitude": "40.177346", 
+		      "longitude": "-75.106610"
 		 		},
 		    "url" : "http://reidrepairs.com",
 		  	"sameAs" : [ "https://www.facebook.com/Reid-Repairs-960859200641515/",
