replace icon with span

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<div class="background static" id="branding">
 			<div class="hr"></div>
 			<h1 id="circle">REID REPAIRS LLC</h1>
-			<div class="icon"></div>
+			<div class="span"></div>
 			<h1 class="subtext" id="subtext">
 				AUTOMOTIVE REPAIR AND MAINTENANCE
 			</h1>
@@ -148,19 +148,19 @@
 						<span class="social">
 							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank" title="Facebook">
 								<span class="sr-only">Like us on Facebook</span>
-								<icon class="fa fa-facebook-official icon-locks"></icon>
+								<span class="fa fa-facebook-official span-locks"></span>
 							</a>
 						</span>
 				        <span class="social">
 				        	<a href="https://twitter.com/reidrepairs" target="_blank" title="Twitter">
 				        		<span class="sr-only">Follow us on Twitter</span>
-				        		<icon class="fa fa-twitter icon-lock"></icon>
+				        		<span class="fa fa-twitter span-lock"></span>
 			        		</a>
 		        		</span>
 				        <span class="social">
 				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank" title="Google Plus">
 				        		<span class="sr-only">Plus 1 us on Google Plus</span>
-				        		<icon class="fa fa-google-plus-official icon-lock"></icon>
+				        		<span class="fa fa-google-plus-official span-lock"></span>
 			        		</a>
 		        		</span>
 					</div>
@@ -268,19 +268,19 @@
 		<div class="front mid-page" id="general-info">
 			<h3>Convenience</h3>
 			
-			<icon class="fa fa-car" aria-hidden="true"></icon>
+			<span class="fa fa-car" aria-hidden="true"></span>
 			<p>Just seven minutes from the PA Turnpike, right in the center of Hatboro, PA.</p>
 			
-			<icon class="fa fa-road" aria-hidden="true"></icon>
+			<span class="fa fa-road" aria-hidden="true"></span>
 			<p>We're right at the corner of York Rd and Moreland Ave.</p>
 
-			<icon class="fa fa-train" aria-hidden="true"></icon>
+			<span class="fa fa-train" aria-hidden="true"></span>
 			<p>Reid Repairs is located in walking distance to SEPTA's Hatboro Regional Rail Station.</p>
 
-			<icon class="fa fa-bus" aria-hidden="true"></icon>
+			<span class="fa fa-bus" aria-hidden="true"></span>
 			<p>Don't like the train? Take a bus!</p>
 
-			<icon class="fa fa-truck" aria-hidden="true"></icon>
+			<span class="fa fa-truck" aria-hidden="true"></span>
 			<p>Don't like the bus? Rent a U-Haul truck!</p>
 			<div class="height"></div>
 		</div>
