--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<div class="background static" id="branding">
 			<div class="hr"></div>
 			<h1 id="circle">REID REPAIRS LLC</h1>
-			<div class="span"></div>
+			<div class="icon"></div>
 			<h1 class="subtext" id="subtext">
 				AUTOMOTIVE REPAIR AND MAINTENANCE
 			</h1>
@@ -148,19 +148,19 @@
 						<span class="social">
 							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank" title="Facebook">
 								<span class="sr-only">Like us on Facebook</span>
-								<span class="fa fa-facebook-official span-locks"></span>
+								<span class="fa fa-facebook-official icon-locks"></span>
 							</a>
 						</span>
 				        <span class="social">
 				        	<a href="https://twitter.com/reidrepairs" target="_blank" title="Twitter">
 				        		<span class="sr-only">Follow us on Twitter</span>
-				        		<span class="fa fa-twitter span-lock"></span>
+				        		<span class="fa fa-twitter icon-lock"></span>
 			        		</a>
 		        		</span>
 				        <span class="social">
 				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank" title="Google Plus">
 				        		<span class="sr-only">Plus 1 us on Google Plus</span>
-				        		<span class="fa fa-google-plus-official span-lock"></span>
+				        		<span class="fa fa-google-plus-official icon-lock"></span>
 			        		</a>
 		        		</span>
 					</div>
