--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
 		<noscript id="deferred-styles">
 			<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-			<link rel="stylesheet" href="css/main.min.css">
+			
 			<!-- Font Awesome gives us our social logos -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    </noscript>
+	    <link rel="stylesheet" href="css/main.min.css" async>
 	    <script>
 	      var loadDeferredStyles = function() {
 	        var addStylesNode = document.getElementById("deferred-styles");
