--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 
 		<noscript id="deferred-styles">
 			<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-			
+			<link rel="stylesheet" href="css/main.min.css">
 			<!-- Font Awesome gives us our social logos -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    </noscript>
-	    <link rel="stylesheet" href="css/main.min.css" async>
 	    <script>
 	      var loadDeferredStyles = function() {
 	        var addStylesNode = document.getElementById("deferred-styles");
@@ -149,19 +148,19 @@
 						<span class="social">
 							<a href="https://www.facebook.com/Reid-Repairs-960859200641515/" target="_blank" title="Facebook">
 								<span class="sr-only">Like us on Facebook</span>
-								<span class="fa fa-facebook-official icon-locks"></span>
+								<icon class="fa fa-facebook-official icon-locks"></icon>
 							</a>
 						</span>
 				        <span class="social">
 				        	<a href="https://twitter.com/reidrepairs" target="_blank" title="Twitter">
 				        		<span class="sr-only">Follow us on Twitter</span>
-				        		<span class="fa fa-twitter icon-lock"></span>
+				        		<icon class="fa fa-twitter icon-lock"></icon>
 			        		</a>
 		        		</span>
 				        <span class="social">
 				        	<a href="https://plus.google.com/+Reidrepairs" target="_blank" title="Google Plus">
 				        		<span class="sr-only">Plus 1 us on Google Plus</span>
-				        		<span class="fa fa-google-plus-official icon-lock"></span>
+				        		<icon class="fa fa-google-plus-official icon-lock"></icon>
 			        		</a>
 		        		</span>
 					</div>
@@ -269,19 +268,19 @@
 		<div class="front mid-page" id="general-info">
 			<h3>Convenience</h3>
 			
-			<span class="fa fa-car" aria-hidden="true"></span>
+			<icon class="fa fa-car" aria-hidden="true"></icon>
 			<p>Just seven minutes from the PA Turnpike, right in the center of Hatboro, PA.</p>
 			
-			<span class="fa fa-road" aria-hidden="true"></span>
+			<icon class="fa fa-road" aria-hidden="true"></icon>
 			<p>We're right at the corner of York Rd and Moreland Ave.</p>
 
-			<span class="fa fa-train" aria-hidden="true"></span>
+			<icon class="fa fa-train" aria-hidden="true"></icon>
 			<p>Reid Repairs is located in walking distance to SEPTA's Hatboro Regional Rail Station.</p>
 
-			<span class="fa fa-bus" aria-hidden="true"></span>
+			<icon class="fa fa-bus" aria-hidden="true"></icon>
 			<p>Don't like the train? Take a bus!</p>
 
-			<span class="fa fa-truck" aria-hidden="true"></span>
+			<icon class="fa fa-truck" aria-hidden="true"></icon>
 			<p>Don't like the bus? Rent a U-Haul truck!</p>
 			<div class="height"></div>
 		</div>
