--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<!--<meta name="google-site-verification" content="meTNIpi8kY7YotKUMxbV5LoC3pKKLF00hOXYvlgsyiA" /> -->
+		<meta name="google-site-verification" content="meTNIpi8kY7YotKUMxbV5LoC3pKKLF00hOXYvlgsyiA" />
 		<title>Reid Repairs - Auto Repair - Hatboro, PA 19040</title>
 		<meta name="description" content="Independently owned and operated mechanic shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.">
 		<meta name="keywords" content="Reid Repairs, Auto Repair, Hatboro, PA">
