--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!--<meta name="google-site-verification" content="meTNIpi8kY7YotKUMxbV5LoC3pKKLF00hOXYvlgsyiA" /> -->
 		
 		<title>Reid Repairs - Auto Repair - Hatboro, PA 19040</title>
-		<meta name="description" content="Independently owned and operated mechanic shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.">
+		<meta name="description" content="Independently owned and operated auto repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.">
 		<meta name="keywords" content="Reid Repairs, Auto Repair, Hatboro, PA">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,10 +16,11 @@
 		{
 		  "@context" : "http://schema.org",
 		  "@type" : "AutoRepair",
-		  "name" : "Reid Repairs - Auto Repair",
+		  "name" : "Reid Repairs",
 		  "telephone" : "267-454-4682",
 		  "logo":"http://reidrepairs.com/img/logo.png",
 		  "image":"http://reidrepairs.com/img/snowy.jpg",
+		  "priceRange": "$$",
 		  "address" : {
 		    "@type" : "PostalAddress",
 		    "streetAddress" : "2 S York Road",
@@ -29,7 +30,7 @@
 		  },
 		  "founder":"Matthew Reid",
 		  "legalName":"Reid Repairs, LLC",
-		  "description": "Independently owned and operated mechanic and car repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
+		  "description": "Independently owned and operated auto repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
 		  	"telephone": "267-454-4682",
 		  	"openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:00", "Sa 09:00-13:00"],
 		  	"geo": {
@@ -86,7 +87,7 @@
 			}
 			#circle{
 				width:50%;
-				min-width:200px;
+				min-width:230px;
 				max-width: 500px;
 				margin:0 auto;
 				font-family: copper, Times, serif;
