--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		<div class="front mid-page" id="contact-us">
 			<h2>Contact Us</h2>
 			<p>Have a question for the a certified mechanic? Feel free to fill out this form:</p>
-			<form action="https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse" 
+			<form id="contact-form" action="https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse" 
 				method="POST" 
 				id="ss-form" 
 				target="_self" 
@@ -325,13 +325,20 @@
 			    	<textarea name="entry.1021358522" required class="form-control" id="inputDescription" placeholder="Reason for Visit"></textarea>
 			  	</div>
 
-			  	<!-- To implement reCaptcha - can only do if backend is enabled. 
+			  	<!-- To implement reCaptcha - can only do if backend is enabled. -->
 			  	<div class="g-recaptcha" data-sitekey="6Le0PBcUAAAAAOvmir1ISKZcYCCGZzP69qTEQddB"></div>
-			  	-->
+			  	
 			  	<div class="btn-row">
 			  		<button class="btn btn-primary" type="submit">Send</button>
 				</div>
 			</form>
+			<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+		     <script>
+		       function onSubmit(token) {
+		         document.getElementById("contact-form").submit();
+		       }
+		     </script>
+
 			<div id="confirmation">
 				<h3>Thanks for contacting us!</h3>
 				<p>We're looking forward to speaking with you</p>
