--- a/index.html
+++ b/index.html
@@ -325,11 +325,12 @@
 			    	<textarea name="entry.1021358522" required class="form-control" id="inputDescription" placeholder="Reason for Visit"></textarea>
 			  	</div>
 
-			  	<!-- To implement reCaptcha - can only do if backend is enabled. -->
+			  	<!-- To implement reCaptcha - can only do if backend is enabled. 
 			  	<div class="g-recaptcha" data-sitekey="6Le0PBcUAAAAAOvmir1ISKZcYCCGZzP69qTEQddB"></div>
+			  	-->
 			  	
 			  	<div class="btn-row">
-			  		<button class="btn btn-primary" type="submit">Send</button>
+			  		<button class="g-recaptcha btn btn-primary" data-sitekey="6Le0PBcUAAAAAOvmir1ISKZcYCCGZzP69qTEQddB" type="submit" data-callback='onSubmit'>Send</button>
 				</div>
 			</form>
 			<script src="https://www.google.com/recaptcha/api.js" async defer></script>
