--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		<div class="transparent width-control" id="ase-area">
 			<div class="height"></div>
 			
-			<div class="uhaul-image">
+			<div>
 				<img src="img/ase-logo.png" alt="ASE Certified mechanics" >
 			</div>
 			<div class="height"></div>
@@ -283,19 +283,19 @@
 			<icon class="fa fa-bus" aria-hidden="true"></icon>
 			<p>Don't like the train? Take a bus!</p>
 
-			<icon class="fa fa-truck" aria-hidden="true"></icon>
+			<!-- <icon class="fa fa-truck" aria-hidden="true"></icon>
 			<p>Don't like the bus? Rent a U-Haul truck!</p>
-			<div class="height"></div>
+			<div class="height"></div> -->
 		</div>
 
-		<div class="transparent width-control" id="uhaul-area">
+		<div class="transparent width-control">
 			
 			<div class="height"></div>
 			
-			<div class="uhaul-image">
+			<!-- <div class="uhaul-image">
 				<img src="img/uhaullogo.png" alt="Uhaul Rental" >
 			</div>
-			<div class="height"></div>
+			<div class="height"></div> -->
 			
 		</div>
 		
