--- a/index.html
+++ b/index.html
@@ -292,10 +292,10 @@
 			
 			<div class="height"></div>
 			
-			<!-- <div class="uhaul-image">
-				<img src="img/uhaullogo.png" alt="Uhaul Rental" >
+			<div style="height:120px;" class="uhaul-image">
+				<!-- <img src="img/uhaullogo.png" alt="Uhaul Rental" > -->
 			</div>
-			<div class="height"></div> -->
+			<div class="height"></div>
 			
 		</div>
 		
