https all the things

--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
     <noscript id="deferred-styles">
       <link
         rel="stylesheet"
-        href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
       />
       <link rel="stylesheet" href="css/main.min.css" />
       <!-- Font Awesome gives us our social logos -->
