--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js"></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css"
       rel="stylesheet"
@@ -124,7 +123,6 @@
         position: relative;
         bottom: 16px;
         font-family: SinkinSans, "Courier New", monospace;
-        //margin-top:0;
       }
       .sr-only {
         height: 1px;
@@ -344,20 +342,6 @@
 
       <div class="map">
         <div id="map"></div>
-
-        <script>
-          mapboxgl.accessToken =
-            "pk.eyJ1IjoibWFwc2VhbiIsImEiOiJjam5pcWhsY2MwbHJ6M3ZvNHNjeHFramR4In0.Ckttv_Sv6WCXJZ5UF0IOJw";
-          var map = new mapboxgl.Map({
-            container: "map", // container id
-            style: "mapbox://styles/mapbox/streets-v9", // stylesheet location
-            center: [-75.10661, 40.177346], // starting position [lng, lat]
-            zoom: 12 // starting zoom
-          });
-          var marker = new mapboxgl.Marker()
-            .setLngLat([-75.10661, 40.177346])
-            .addTo(map);
-        </script>
       </div>
       <div class="half-height"></div>
     </div>
@@ -482,6 +466,7 @@
       <img alt="silly gif of dancing John Travolta" src="img/vince.gif" />
     </div>
   </body>
+
   <footer>
     <div class="bottom-links front">
       <div class="quarter-height"></div>
@@ -506,13 +491,25 @@
       async
     ></script>
 
-    <!--
-      <script id="mapsJS" src="https://maps.googleapis.com/maps/api/js" async></script>
-    -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js"></script>
 
     <script>
+      var map;
+      function loadMap() {
+        mapboxgl.accessToken =
+          "pk.eyJ1IjoibWFwc2VhbiIsImEiOiJjam5pcWhsY2MwbHJ6M3ZvNHNjeHFramR4In0.Ckttv_Sv6WCXJZ5UF0IOJw";
+        map = new mapboxgl.Map({
+          container: "map", // container id
+          style: "mapbox://styles/mapbox/streets-v9", // stylesheet location
+          center: [-75.10661, 40.177346], // starting position [lng, lat]
+          zoom: 12 // starting zoom
+        });
+        var marker = new mapboxgl.Marker()
+          .setLngLat([-75.10661, 40.177346])
+          .addTo(map);
+      }
       // lettering.js
-      document.getElementById("jquery").addEventListener("load", function() {
+      function lettering() {
         !(function(a) {
           function b(b, c, d, e) {
             var f = b.text(),
@@ -569,11 +566,9 @@
               : c.init.apply(this, [].slice.call(arguments, 0));
           };
         })(jQuery);
-      });
-    </script>
-    <script>
+      }
       // < !--fitText.js -->
-      document.getElementById("jquery").addEventListener("load", function() {
+      function fitText() {
         !(function(a) {
           a.fn.fitText = function(b, c) {
             var d = b || 1,
@@ -599,11 +594,8 @@
             });
           };
         })(jQuery);
-      });
-    </script>
-    <script>
-      // < !--circletype.js -->
-      document.getElementById("jquery").addEventListener("load", function() {
+      }
+      function loadCircleType() {
         $.fn.circleType = function(a) {
           var c = { dir: 1, position: "relative" };
           return "function" != typeof $.fn.lettering
@@ -718,80 +710,90 @@
               });
         };
         $("#circle").circleType({ fitText: true, radius: 800 });
-      });
-    </script>
-    <script>
-      // < !--main.js -->
-      document.getElementById("jquery").addEventListener("load", function() {
-        // function initialize() {
-        //   var b = (document.getElementById("map"),
-        //     {
-        //       center: new google.maps.LatLng(40.177124, -75.106621),
-        //       zoom: 15,
-        //       mapTypeId: google.maps.MapTypeId.ROADMAP
-        //     }),
-        //     c = new google.maps.Map(document.getElementById("map"), b);
-        //   (marker = new google.maps.Marker({
-        //     map: c,
-        //     position: new google.maps.LatLng(40.177124, -75.106621)
-        //   })),
-        //     (infowindow = new google.maps.InfoWindow({
-        //       content:
-        //         "<strong>Reid Repairs</strong><br>2 South York Road<br>19040 Hatboro<br>"
-        //     })),
-        //     google.maps.event.addListener(marker, "click", function() {
-        //       infowindow.open(c, marker);
-        //     }),
-        //     infowindow.open(c, marker);
-        // }
-        $(document).ready(function() {
-          setHeights(), map.resize();
-          // , initialize();
-        });
-        var pathname = window.location.pathname,
-          setHeights = function() {
-            $("body").css(
+      }
+      function setHeights() {
+        $("body").css(
+          "background",
+          '#000 url("img/car7t.png") no-repeat fixed'
+        ),
+          $("body").css("backgroundSize", "1750px");
+        var a = $("#inspection-area").offset().top,
+          b = $("#ase-area").offset().top,
+          c = $("#map-area").offset().top,
+          d = $("#inspection-area").height(),
+          e = a + d + 75,
+          f = b + d + 75,
+          g = c + d + 75;
+        $(window).scroll(function() {
+          var a = $(window).scrollTop();
+          a > 1250 &&
+            ($("body").css(
               "background",
               '#000 url("img/car7t.png") no-repeat fixed'
             ),
-              $("body").css("backgroundSize", "1750px");
-            var a = $("#inspection-area").offset().top,
-              b = $("#ase-area").offset().top,
-              c = $("#map-area").offset().top,
-              d = $("#inspection-area").height(),
-              e = a + d + 75,
-              f = b + d + 75,
-              g = c + d + 75;
-            $(window).scroll(function() {
-              var a = $(window).scrollTop();
-              a <= 1254 &&
-                ($("body").css(
-                  "background",
-                  '#000 url("img/car7t.png") no-repeat fixed'
-                ),
-                $("body").css("backgroundSize", "1750px")),
-                a > e &&
-                  ($("body").css(
-                    "background",
-                    '#000 url("img/car8t.png") no-repeat fixed'
-                  ),
-                  $("body").css("backgroundSize", "1750px")),
-                a > f &&
-                  ($("body").css(
-                    "background",
-                    '#000 url("img/car4t.png") no-repeat fixed'
-                  ),
-                  $("body").css("backgroundSize", "1750px")),
-                a > g &&
-                  ($("body").css(
-                    "background",
-                    '#000 url("img/car6t.png") no-repeat fixed'
-                  ),
-                  $("body").css("backgroundSize", "1750px"));
-            });
-          };
-      });
+            $("body").css("backgroundSize", "1750px")),
+            a > e &&
+              ($("body").css(
+                "background",
+                '#000 url("img/car8t.png") no-repeat fixed'
+              ),
+              $("body").css("backgroundSize", "1750px")),
+            a > f &&
+              ($("body").css(
+                "background",
+                '#000 url("img/car4t.png") no-repeat fixed'
+              ),
+              $("body").css("backgroundSize", "1750px")),
+            a > g &&
+              ($("body").css(
+                "background",
+                '#000 url("img/car6t.png") no-repeat fixed'
+              ),
+              $("body").css("backgroundSize", "1750px"));
+        });
+      }
+      function customFormJS() {
+        $("#confirmation").hide();
+        $("#ss-form").submit(function(e) {
+          e.preventDefault();
+          $.ajax({
+            url:
+              "https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse",
+            data: $(this).serialize(),
+            type: "POST",
+            dataType: "xml",
+            success: function(data) {
+              $("#confirmation").show();
+              $("#ss-form").hide();
+            },
+            error: function(xhr, status, error) {
+              $("#confirmation").show();
+              $("#ss-form").hide();
+            }
+          });
+        });
+      }
     </script>
+    <script>
+      // document.getElementById("jquery").addEventListener("load", function() {
+      lettering();
+      loadMap();
+      fitText();
+      loadCircleType();
+      $(document).ready(function() {
+        setHeights();
+        map.resize();
+        // , initialize();
+        $("#subtext").fitText(5, {
+          minFontSize: "12px",
+          maxFontSize: "24px"
+        });
+      });
+      var pathname = window.location.pathname;
+      // });
+      customFormJS();
+    </script>
+
     <script>
       (function(i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
@@ -815,35 +817,6 @@
 
       ga("create", "UA-71607216-1", "auto");
       ga("send", "pageview");
-    </script>
-    <script>
-      document.getElementById("jquery").addEventListener("load", function() {
-        $(document).ready(function() {
-          $("#subtext").fitText(5, {
-            minFontSize: "12px",
-            maxFontSize: "24px"
-          });
-        });
-        $("#confirmation").hide();
-        $("#ss-form").submit(function(e) {
-          e.preventDefault();
-          $.ajax({
-            url:
-              "https://docs.google.com/a/reidrepairs.com/forms/d/1qdhCt3fDuoNEPx3uhPz4wSh8TL3mUCzcgcm6BQWjRTg/formResponse",
-            data: $(this).serialize(),
-            type: "POST",
-            dataType: "xml",
-            success: function(data) {
-              $("#confirmation").show();
-              $("#ss-form").hide();
-            },
-            error: function(xhr, status, error) {
-              $("#confirmation").show();
-              $("#ss-form").hide();
-            }
-          });
-        });
-      });
     </script>
 
     <!--
