Disable CORS and set to call self

--- a/html/index.html
+++ b/html/index.html
@@ -762,7 +762,7 @@
           const formData = JSON.stringify($("#ss-form").serializeArray());
 
           $.ajax({
-            url: "http://localhost:3000/form/",
+            url: "https://reidrepairs.com:3000/form/",
             data: formData,
             type: "POST",
             dataType: "json",
