--- a/html/index.html
+++ b/html/index.html
@@ -149,7 +149,14 @@
     <div class="content static" id="content">
       <div>
         <div class="front top-page">
-          <div class="quarter-height"></div>
+          <div
+            class="quarter-height"
+            style="height: 40px;background-color: #ec7063;"
+          >
+            <span style="position: relative;top: 10px;font-size: 18px;"
+              >We are open and operating under normal business hours</span
+            >
+          </div>
           <div>
             <h2>Hours</h2>
             <p>Monday - Friday 8:00 to 5:30</p>
@@ -467,7 +474,7 @@
         <p>Would you like more information?</p>
         <p>Go ahead and reach out, we're happy to help.</p>
       </div>
-      <img alt="silly gif of dancing John Travolta" src="img/vince.gif" />
+      <!-- <img alt="silly gif of dancing John Travolta" src="img/vince.gif" /> -->
     </div>
   </body>
 
