Corona message change for mobile

--- a/html/index.html
+++ b/html/index.html
@@ -153,8 +153,10 @@
             class="quarter-height"
             style="height: 40px;background-color: #ec7063;"
           >
-            <span style="position: relative;top: 10px;font-size: 18px;"
-              >We are open and operating under normal business hours</span
+            <span
+              id="notification-text"
+              style="position: relative;top: 10px;font-size: 18px;"
+              >We are open during normal business hours at this time</span
             >
           </div>
           <div>
