Corona message change for mobile 2

--- a/html/index.html
+++ b/html/index.html
@@ -153,9 +153,7 @@
             class="quarter-height"
             style="height: 40px;background-color: #ec7063;"
           >
-            <span
-              id="notification-text"
-              style="position: relative;top: 10px;font-size: 18px;"
+            <span id="notification-text" style="position: relative;top: 10px"
               >We are open during normal business hours at this time</span
             >
           </div>
