Corona message change for mobile 3

--- a/html/index.html
+++ b/html/index.html
@@ -154,7 +154,7 @@
             style="height: 40px;background-color: #ec7063;"
           >
             <span id="notification-text" style="position: relative;top: 10px"
-              >We are open during normal business hours at this time</span
+              >We are open during normal business hours</span
             >
           </div>
           <div>
