Saturday hours change

--- a/html/index.html
+++ b/html/index.html
@@ -160,7 +160,7 @@
           <div>
             <h2>Hours</h2>
             <p>Monday - Friday 8:00 to 5:30</p>
-            <p>Saturday 8:00 to 3:00</p>
+            <p>Saturday - Appointment Only</p>
             <h2>Location</h2>
             <p>
               <span
