Saturday hours in json

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
         "legalName": "Reid Repairs, LLC",
         "description": "Independently owned and operated auto repair shop with over 15 years of experience. Happy to answer questions you may have about your vehicle.",
         "telephone": "267-454-4682",
-        "openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:30", "Sa 08:00-15:00"],
+        "openingHours": ["Mo,Tu,We,Th,Fr 08:00-17:30"],
         "geo": {
           "@type": "GeoCoordinates",
           "latitude": "40.177346",
