Put Travolta back

--- a/html/index.html
+++ b/html/index.html
@@ -474,7 +474,7 @@
         <p>Would you like more information?</p>
         <p>Go ahead and reach out, we're happy to help.</p>
       </div>
-      <!-- <img alt="silly gif of dancing John Travolta" src="img/vince.gif" /> -->
+      <img alt="silly gif of dancing John Travolta" src="img/vince.gif" />
     </div>
   </body>
 
